adding update profile functionality